--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ app.jwtExpirationInMs=86400000 # 24 horas
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/egresados_db
 spring.datasource.username=postgres
-spring.datasource.password=300324
+spring.datasource.password=casama123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
