--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ app.jwtExpirationInMs=86400000 # 24 horas
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/egresados_db
 spring.datasource.username=postgres
-spring.datasource.password=Casama123
+spring.datasource.password=casama123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Thymeleaf
@@ -38,4 +38,6 @@ spring.security.oauth2.client.registration.auth0.authorization-grant-type=author
 spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-6v1unrgk3o6a56fo.us.auth0.com/
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-6v1unrgk3o6a56fo.us.auth0.com/
+
+logging.level.org.springframework.security=DEBUG
 
