--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,9 @@ app.jwtSecret=SecretKeyParaFirmarJWTs123
 app.jwtExpirationInMs=86400000 # 24 horas
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/egresados_db
-spring.datasource.username=postgres
-spring.datasource.password=casama123
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # Thymeleaf
 spring.thymeleaf.cache=false
