--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ app.jwtSecret=SecretKeyParaFirmarJWTs123
 app.jwtExpirationInMs=86400000 # 24 horas
 
 # Database
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/defaultdb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 
 # Thymeleaf
 spring.thymeleaf.cache=false
