--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,10 @@ app.jwtSecret=SecretKeyParaFirmarJWTs123
 app.jwtExpirationInMs=86400000 # 24 horas
 
 # Database
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/defaultdb}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
+spring.datasource.url=jdbc:postgresql://localhost:5432/egresados_db
+spring.datasource.username=postgres
+spring.datasource.password=300324
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Thymeleaf
 spring.thymeleaf.cache=false
