--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ app.jwtSecret=SecretKeyParaFirmarJWTs123
 app.jwtExpirationInMs=86400000 # 24 horas
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/egresados_db
-spring.datasource.username=postgres
-spring.datasource.password=300324
+spring.datasource.url=jdbc:postgresql://ep-little-frog-a85l3f98-pooler.eastus2.azure.neon.tech:5432/Egresados_db
+spring.datasource.username=Egresados_db_owner
+spring.datasource.password=npg_Ju4CSgNo5BDp
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Thymeleaf
