--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,13 @@ server.port=8080
 app.jwtSecret=SecretKeyParaFirmarJWTs123
 app.jwtExpirationInMs=86400000 # 24 horas
 
-# Database
+# Database neon
 spring.datasource.url=jdbc:postgresql://ep-little-frog-a85l3f98-pooler.eastus2.azure.neon.tech:5432/Egresados_db
 spring.datasource.username=Egresados_db_owner
 spring.datasource.password=npg_Ju4CSgNo5BDp
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
 
 # Thymeleaf
 spring.thymeleaf.cache=false
@@ -31,7 +33,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.security.oauth2.client.registration.auth0.client-id=0NARD1y0LJkjHhKZ80oYIWl6FOBH8GcA
 spring.security.oauth2.client.registration.auth0.client-secret=TGd6wzBIRtPe-5jsnNmlfjh8DSsVsNUosvfQayWckA0OSCpPh-ewbKJf_Xqmj8Yh
 spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
-spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8080/login/oauth2/code/auth0
+spring.security.oauth2.client.registration.auth0.redirect-uri=http://https://sistema-de-seguimiento-de-egresados.onrender.com/login/oauth2/code/auth0
 spring.security.oauth2.client.registration.auth0.client-name=Auth0
 spring.security.oauth2.client.registration.auth0.authorization-grant-type=authorization_code
 
