--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,16 +30,25 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 #Configuración de Auth0
-spring.security.oauth2.client.registration.auth0.client-id=0NARD1y0LJkjHhKZ80oYIWl6FOBH8GcA
-spring.security.oauth2.client.registration.auth0.client-secret=TGd6wzBIRtPe-5jsnNmlfjh8DSsVsNUosvfQayWckA0OSCpPh-ewbKJf_Xqmj8Yh
+# Configuración de Auth0
+spring.security.oauth2.client.registration.auth0.client-id=0NARD1y0LJkjHNKZ8bOYIN16F0BH86cA
+spring.security.oauth2.client.registration.auth0.client-secret=TGd6wzBIRtPe-5jsnMmlfjh805sVsNUosvfQaykkkA005CpPh-eMMXJf_XqnjSYh
 spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
-spring.security.oauth2.client.registration.auth0.redirect-uri=http://https://sistema-de-seguimiento-de-egresados.onrender.com/login/oauth2/code/auth0
+spring.security.oauth2.client.registration.auth0.redirect-uri=https://sistema-de-seguimiento-de-egresados.onrender.com/login/oauth2/code/auth0
 spring.security.oauth2.client.registration.auth0.client-name=Auth0
 spring.security.oauth2.client.registration.auth0.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.auth0.provider=auth0
 
-spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-6v1unrgk3o6a56fo.us.auth0.com/
+# Configuración del proveedor Auth0
+spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/
+spring.security.oauth2.client.provider.auth0.authorization-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/authorize
+spring.security.oauth2.client.provider.auth0.token-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/oauth/token
+spring.security.oauth2.client.provider.auth0.user-info-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/userinfo
+spring.security.oauth2.client.provider.auth0.jwk-set-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/.well-known/jwks.json
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-6v1unrgk3o6a56fo.us.auth0.com/
+# Configuración del Resource Server (si usas JWT)
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/
 
+# Logging (opcional)
 logging.level.org.springframework.security=DEBUG
 
