--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.security.oauth2.client.registration.auth0.client-id=0NARD1y0LJkjHhKZ80oYIWl6FOBH8GcA
 spring.security.oauth2.client.registration.auth0.client-secret=TGd6wzBIRtPe-5jsnNmlfjh8DSsVsNUosvfQayWckA0OSCpPh-ewbKJf_Xqmj8Yh
 spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
-spring.security.oauth2.client.registration.auth0.redirect-uri=https://sistema-de-seguimiento-de-egresados.onrender.com/oauth2/authorization/auth0
+spring.security.oauth2.client.registration.auth0.redirect-uri=https://sistema-de-seguimiento-de-egresados.onrender.com/login/oauth2/code/auth0
 spring.security.oauth2.client.registration.auth0.client-name=Auth0
 spring.security.oauth2.client.registration.auth0.authorization-grant-type=authorization_code
 
@@ -42,6 +42,7 @@ spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-6v1unrgk3o6a
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-6v1unrgk3o6a56fo.us.auth0.com/
 
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
 
 spring.security.oauth2.client.provider.auth0.user-info-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/userinfo
 spring.security.oauth2.client.provider.auth0.jwk-set-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/.well-known/jwks.json
