--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,9 +37,10 @@ spring.security.oauth2.client.registration.auth0.redirect-uri=https://sistema-de
 spring.security.oauth2.client.registration.auth0.client-name=Auth0
 spring.security.oauth2.client.registration.auth0.authorization-grant-type=authorization_code
 
-spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-6v1unrgk3o6a56fo.us.auth0.com/
+spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-6v1unrgk3o6a56fo.us.auth0.com/
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-6vlumpgk3oba56fo.us.auth0.com/
+
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
